# shrtn

./: .env  .gitignore  Cargo.toml  README.md  auth.go  database.go  flake.nix  go.mod  handlers.go  main.go  server.go  utils.go
src/: database.rs  main.rs  utils.rs
src/controllers/: mod.rs  templates.rs  urls.rs
src/services/: urls.rs
templates/: 404.html  base.html  ctrl.html  index.html  info.html
